[package]
name = "xinstantshot"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.2.1"
home = "0.5.5"
x11-screenshot = "0.2.1"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
notify-rust = { version = "4.9.0", default-features = false, features = ["zbus", "serde"] }
image = { version = "0.23.14", default-features = false, features = ["png"] }
